added an ugly text box next to buddy

--- a/testing/generic.html
+++ b/testing/generic.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="../script.js"></script>
+  <script src="../jquery-3.2.1.min.js"></script>
 </head>
 <body>
 
@@ -11,7 +13,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mattis arcu vitae placerat suscipit. Cras a elit laoreet, facilisis nunc sed, fermentum diam. Suspendisse feugiat, elit at luctus congue, augue justo mollis sem, quis vestibulum nulla ex in velit. Vestibulum vitae mauris ullamcorper, elementum est sit amet, tempor nibh. Suspendisse egestas sit amet erat ut laoreet. Sed aliquam non ligula id semper. Donec eu condimentum tellus, in pretium neque. Mauris erat risus, venenatis non nunc at, bibendum viverra mi. Quisque enim odio, ultrices eu vestibulum a, efficitur nec mi. Cras quis euismod risus..</p>
 
 
-    <div id="badge"></div>
+    <input type="submit" value="Calculate Goal"></input>
 
   </div>
 </body>
